--- a/webapp/src/main/resources/public/css/style.css
+++ b/webapp/src/main/resources/public/css/style.css
@@ -1517,24 +1517,18 @@ table.info-box-sub-table td.values {
     color: #2f2f2f;
 }
 
-#settings-info-box-container #advanced-settings-box .advanced-setting-options label {
-    display: inline-flex;
-    align-items: center;
-    gap: 6px;
-    cursor: pointer;
+#settings-info-box-container #advanced-settings-box .advanced-setting-options .standard-checkbox .label-span label {
+    font-size: 14px;
 }
 
 #settings-info-box-container #advanced-settings-box .advanced-setting-options input[type=checkbox] {
-    width: 15px;
-    height: 15px;
     accent-color: #6b5b3e;
-    cursor: pointer;
-    margin: 0;
 }
 
 #settings-info-box-container #advanced-settings-box .advanced-setting-select {
     width: 100%;
     max-width: 320px;
+    height: auto;
     padding: 5px 28px 5px 9px;
     font-size: 13px;
     color: #2f2f2f;
